syntax = "proto3";

import "../general.proto";

message RegisterActorRequest {
    string name = 1;
    repeated string meta = 2; // Data is sent to the user when connecting to the processor.
}

message RegisterActorResponse {
    UUID identifier = 1; // The identifier will be generated by the processor if the connection was successful.
    Status status = 2;

    enum Status {
        SUC_CONNECTED = 0;
        ERR_ALREADY_CONNECTED = 1;
        ERR_UNKNOWN = 2;
    }
}
