syntax = "proto3";

import "../general.proto";

message UpdateSoundRateRequest {
    UUID sound = 1; // Sound identifier.
    double rate = 2;
}

message UpdateSoundRateResponse {
    UUID sound = 1;
    double rate = 2;
}
